@startuml

title __DATAMAPPER's Class Diagram__\n

  package  {
    package dataMapper {
      class AdministratorMapper {
          {static} - updateAdministratorStatement : String
          {static} - insertAdministratorStatement : String
          {static} - deleteAdministratorStatement : String
          {static} - findAdministratorByIdStatement : String
          {static} - findAdministratorByEmailStatement : String
          {static} - findAdminByName : String
          + AdministratorMapper()
          + insert()
          + delete()
          + update()
          + findAdminById()
          + findAdminByEmail()
          {static} + getAdminByName()
      }
    }
  }
  

  package  {
    package dataMapper {
      class CustomerMapper {
          {static} - updateCustomerStatement : String
          {static} - insertCustomerStatement : String
          {static} - deleteCustomereStatement : String
          {static} - findCustomerByIdStatement : String
          {static} - findCustomerByEmailStatement : String
          {static} - findCustomerByName : String
          + CustomerMapper()
          + insert()
          + delete()
          + update()
          + findCustomerById()
          + findCustomerByEmail()
          {static} + getCustomerByName()
      }
    }
  }
  

  package  {
    package dataMapper {
      abstract class DataMapper {
          + DataMapper()
          {abstract} + insert()
          {abstract} + delete()
          {abstract} + update()
          {static} + getMapper()
      }
    }
  }
  

  package  {
    package dataMapper {
      class IdentityMap {
          - map : Map<Long, E>
          {static} - singletons : Map<Class, IdentityMap>
          + IdentityMap()
          {static} + getInstance()
          + put()
          + get()
      }
    }
  }
  

  package  {
    package dataMapper {
      class MobilePhoneMapper {
          {static} - findMobilePhoneStatement : String
          {static} - findAvaliableMobilePhoneStatement : String
          {static} - findAllMobilePhoneStatement : String
          {static} - updateMobilePhoneStatement : String
          {static} - insertMobilePhoneStatement : String
          {static} - deleteMobilePhoneStatement : String
          + MobilePhoneMapper()
          + findMobilePhone()
          + findAllMobilePhone()
          + findAvailableMobilePhone()
          + update()
          + insert()
          + delete()
      }
    }
  }
  

  package  {
    package dataMapper {
      class OrderMapper {
          {static} - insertOrderStatement : String
          {static} - updateOrderStatement : String
          {static} - deleteOrderStatement : String
          {static} - findOrderByOrderIdStatement : String
          {static} - findOrderByCustomerIdStatement : String
          {static} - findAllOrderStatement : String
          + OrderMapper()
          + insert()
          + update()
          + delete()
          + findOrderByOrderId()
          + findOrderByCustomerId()
          + findAllOrder()
      }
    }
  }
  

  package  {
    package dataMapper {
      class UnitOfWork {
          {static} - current : ThreadLocal
          - newObjects : List<DomainObject>
          - dirtyObjects : List<DomainObject>
          - deletedObjects : List<DomainObject>
          + UnitOfWork()
          {static} + newCurrent()
          {static} + setCurrent()
          {static} + getCurrent()
          + checkAllList()
          + registerNew()
          + registerDirty()
          + registerDeleted()
          + commit()
      }
    }
  }
  

  AdministratorMapper -up-|> DataMapper
  CustomerMapper -up-|> DataMapper
  MobilePhoneMapper -up-|> DataMapper
  OrderMapper -up-|> DataMapper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
